# TicTacToe

./: .gitignore  CMakeLists.txt  README.md
include/: globals.h
src/: globals.cpp  main.cpp
